--- a/TextGame.vcxproj.filters
+++ b/TextGame.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="cJSON.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="color.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="save.f">
