--- a/TextGame.vcxproj
+++ b/TextGame.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cJSON.c" />
     <ClCompile Include="struct.h" />
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cJSON.h" />
     <ClInclude Include="color.h" />
+    <ClInclude Include="common.h" />
     <ClInclude Include="function.h" />
   </ItemGroup>
   <ItemGroup>
