--- a/TextGame.vcxproj.filters
+++ b/TextGame.vcxproj.filters
@@ -32,10 +32,7 @@
     <ClInclude Include="cJSON.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="color.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="common.h">
+    <ClInclude Include="json_function.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -52,5 +49,13 @@
     <None Include="charactor.json">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="itemID.json">
+      <Filter>资源文件</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Trans_CN.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
